# swiss-army-knife

./: .gitignore  .ignore  README.md  pyproject.toml  settings.example.json  test_eval.py
api/: index.py
app/: __init__.py  agent.py  api.py  cli.py  confidence.py  config.py  llm.py  logging_utils.py  mcp_server.py  models.py  settings.py  store.py  tools.py
evaluation/: __init__.py  dataset.py  evaluate.py  evaluator.py  langfuse_integration.py  metrics.py  runner.py  test_eval.py
swiss_army_knife.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ui/: next.config.ts  package.json  pnpm-lock.yaml
ui/drizzle/: 0001_motionless_vanisher.sql
ui/drizzle/meta/: 0001_snapshot.json  _journal.json
ui/src/: env.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/(auth)/: auth.ts
ui/src/app/(chat)/: actions.ts  layout.tsx
ui/src/app/signin/: page.tsx
ui/src/app/signup/: page.tsx
ui/src/components/: app-sidebar.tsx  chat-header.tsx  chat.tsx  greeting.tsx  message-actions.tsx  message.tsx  messages.tsx  multimodal-input.tsx  sidebar-history-item.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  sign-out-form.tsx  suggested-actions.tsx
ui/src/components/animations/: letter-glitch.tsx
ui/src/components/auth/: sign-in.tsx  sign-up.tsx
ui/src/components/elements/: prompt-input.tsx  tool.tsx
ui/src/db/: queries.ts  relations.ts  schema.ts
ui/src/hooks/: use-auto-resume.ts  use-messages.tsx
ui/src/lib/: auth-client.ts  auth.ts  constants.ts  errors.ts  types.ts  utils.ts
ui/src/lib/ai/: models.mock.ts  models.ts  prompts.ts  (+1 more)
(+15 files in other folders)
