[project]
name = "swiss-army-knife"
version = "0.1.0"
description = "Prototype conversational AI with tool disambiguation and human approval gating"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "fastmcp>=2.14.4,<3",
]

[project.scripts]
sak-cli = "app.cli:app"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
